# shaft_force_sensing

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
docs/: index.html
notebooks/: evaluation.ipynb  inference.ipynb  test_models.ipynb  train_ltc.ipynb  train_transformer.ipynb
shaft_force_sensing/: __init__.py
shaft_force_sensing/data/: __init__.py  dataset.py  loaders.py
shaft_force_sensing/evaluation/: __init__.py  inference.py  logger.py  metrics.py  post_processing.py
shaft_force_sensing/models/: __init__.py  lightning.py  ltc.py  transformer.py
shaft_force_sensing/training/: __init__.py  trainer.py  utils.py
slurm/: job-h100.sh  train.slurm
slurm/output/: slurm-gput067-3142539.err  slurm-gput067-3143983.err  slurm-gput067-3144606.err  slurm-gput067-3144606.out
