[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "shaft_force_sensing"
version = "0.1.0"
description = "Transformer-based force prediction for shaft sensors"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Erie Lab"}]

dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.1.0",
    "torch>=1.9.0",
    "pytorch-lightning>=1.5.0",
    "scikit-learn>=0.24.0",
    "scipy>=1.5.0",
    "matplotlib>=3.3.0",
    "plotly>=5.0.0",
]
